--- a/src/stylesheets/loader.less
+++ b/src/stylesheets/loader.less
@@ -21,6 +21,7 @@
   position: absolute;
   top: 50%;
   left: 50%;
+  transform: translateX(-50%) translateY(-50%);
   border: 4px solid lighten(@dark-color, 25%);
   border-radius: 50%;
 
