--- a/src/scripts/directives/palette-info/palette-info.less
+++ b/src/scripts/directives/palette-info/palette-info.less
@@ -1,6 +1,10 @@
 .palette-info {
   position: relative;
   padding: 1em;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  align-items: center;
   background-color: #fff;
   box-shadow: 0 -2px 0 rgba(0,0,0,.05);
 
@@ -24,11 +28,10 @@
 
   .divider {
     display: inline-block;
-    vertical-align: top;
-    margin: .15em .5em 0 1em;
+    margin: 0 .5em;
     background: darken(#fff, 6%);
     width: 1px;
-    height: 10px;
+    height: 24px;
   }
 }
 
