--- a/src/stylesheets/app.less
+++ b/src/stylesheets/app.less
@@ -8,11 +8,11 @@
 @import 'badge';
 @import 'tooltip';
 
-@import '/src/scripts/directives/palette/palette';
-@import '/src/scripts/directives/palette-info/palette-info';
-@import '/src/scripts/directives/saved-palettes/saved-palettes';
-@import '/src/scripts/directives/info/info';
-@import '/src/scripts/directives/liked-feedback/liked-feedback';
+@import '../scripts/directives/palette/palette';
+@import '../scripts/directives/palette-info/palette-info';
+@import '../scripts/directives/saved-palettes/saved-palettes';
+@import '../scripts/directives/info/info';
+@import '../scripts/directives/liked-feedback/liked-feedback';
 
 *,
 *:before,
