--- a/src/stylesheets/badge.less
+++ b/src/stylesheets/badge.less
@@ -3,8 +3,9 @@
   top: -.5em;
   right: -.5em;
   background: #09f;
-  padding: 1px 3px 2px 4px;
-  font-size: 8px;
+  padding: 3px 4px 2px;
+  font-size: 12px;
+  font-weight: 900;
   border-radius: 6px;
   text-align: center;
   color: #fff;
